<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

  <ImageButton
      android:id="@+id/btnSettings"
      style="@style/Base.Widget.AppCompat.ImageButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:background="@android:color/transparent"
      android:padding="6dp"
      android:src="@drawable/ic_settings"
      android:visibility="visible" />

  <ImageView
    android:id="@+id/imgLogo"
    android:layout_width="140dp"
    android:layout_height="140dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:scaleType="centerCrop"
    android:src="@drawable/ic_launcher"/>

  <TextView
    android:id="@+id/tvTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imgLogo"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="6dp"
    android:text="@string/app_name"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

  <TextView
    android:id="@+id/tvVersion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tvTitle"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="30dp"
    android:text="@string/iVersion"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

  <LinearLayout
    android:id="@+id/lyLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tvVersion"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="3dp"
        android:drawableTint="@color/colorBlue"
        android:hint="@string/etUserHint"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableLeft="@drawable/ic_action_key"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorBlue"
        android:hint="@string/etPassHint"
        android:inputType="textPassword"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIngresar"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/lyLogin"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/btnIngresar"
        app:cornerRadius="30dp"
        android:textColor="@android:color/white"/>
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/lyLogin"
        app:cornerRadius="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/btnRegistrar"
        android:textColor="@android:color/white"/>

  </LinearLayout>

</RelativeLayout>
