<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:cv="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="3dp"
  android:layout_marginTop="3dp"
  android:orientation="vertical"
  cv:cardBackgroundColor="@color/bgCards"
  cv:cardCornerRadius="6dp"
  cv:contentPadding="6dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tvName"
      style="@style/Base.TextAppearance.AppCompat.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Nombre del producto"/>

    <TextView
      android:id="@+id/tvDescription"
      style="@style/Base.TextAppearance.AppCompat.Body1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Descripción"
      android:layout_marginTop="3dp"/>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <LinearLayout
        android:id="@+id/lay_min_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/tvMin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/rounded_corner_yellow"
          android:text="@string/tv_min"
          android:textColor="@android:color/white"
          android:layout_alignParentLeft="true"
          style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <TextView
          android:id="@+id/tvMax"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/rounded_corner_green"
          android:text="@string/tv_max"
          android:layout_marginLeft="3dp"
          android:textColor="@android:color/white"
          style="@style/Base.TextAppearance.AppCompat.Body2"/>

      </LinearLayout>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true">

        <TextView
          android:id="@+id/tvQtyPcs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/rounded_corner_purple"
          android:text="@string/tv_cant"
          android:textColor="@android:color/white"
          style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <TextView
          android:id="@+id/tvQtyPkg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/rounded_corner_purple"
          android:text="@string/tv_type"
          android:layout_marginLeft="3dp"
          android:textColor="@android:color/white"
          style="@style/Base.TextAppearance.AppCompat.Body2"/>

        <TextView
          android:id="@+id/tvPcsTotal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/rounded_corner"
          android:text="@string/tv_pcs"
          android:layout_marginLeft="3dp"
          android:textColor="@android:color/white"
          style="@style/Base.TextAppearance.AppCompat.Body2"/>

      </LinearLayout>


    </RelativeLayout>

  </LinearLayout>

</androidx.cardview.widget.CardView>